# zynap-lead-scoring

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: leads.json
src/lead_scoring/: config.py  io.py  main.py  models.py  pipeline.py
src/lead_scoring/enrichment/: agent.py  llm_client.py  prompts.py
src/lead_scoring/output/: formatter.py
src/lead_scoring/scoring/: engine.py  rules.py
tests/: test_enrichment.py  test_output.py  test_pipeline_io.py  test_scoring.py
